Fixed css and styling so divs no longer overlap

--- a/queue/queue_private.css
+++ b/queue/queue_private.css
@@ -44,5 +44,6 @@ body:before {
 @media (min-width: 768px) {
 	.client-info-section {
 		border-top: 0;
+		overflow-y: scroll;
 	}
 }
